feat: add functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,45 +14,30 @@ knitr::opts_chunk$set(
 pkgload::load_all()
 ```
 
-# audubon
+# audubon <a href='https://paithiov909.github.io/audubon'><img src='man/figures/logo.png' align="right" height="139" /></a>
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-> [ローマ字とひらがなを変換するやつ](https://github.com/yumetodo/romaji_kana_cvt_rust)
+audubon is an R package for various Japanese text processing that contains:
 
-## Comparisons
+- wrapper functions of [hakatashi/japanese.js](https://github.com/hakatashi/japanese.js)
+- wrapper functions of [yumetodo/romaji_kana_cvt_rust](https://github.com/yumetodo/romaji_kana_cvt_rust) (an Roman and Hiragana inverter following the JIS X 4063:2000)
+- an R port of [SudachiCharNormalizer](https://gist.github.com/sorami/bde9d441a147e0fc2e6e5fdd83f4f770)
+- and other miscellaneous functions
 
-### To Roman
+## System Requirements
 
-```{r to_roman}
-zipangu::str_conv_romanhira("でゅららら", "roman")
-audubon::invert_to_roman("でゅららら")
-zipangu::str_conv_romanhira("ゑぐざゐる", "roman")
-audubon::invert_to_roman("ゑぐざゐる")
-zipangu::str_conv_romanhira("じぇんつーぺんぎん", "roman")
-audubon::invert_to_roman("じぇんつーぺんぎん")
-zipangu::str_conv_romanhira("じぇんつうぺんぎん", "roman")
-audubon::invert_to_roman("じぇんつうぺんぎん")
+- Cargo
+
+## Installation
+
+```r
+remotes::install_github("paithio909/audubon")
 ```
-
-### To Hiragana
-
-```{r to_kana}
-zipangu::str_conv_romanhira("dhurarara", "hiragana")
-audubon::invert_to_kana("dhurarara")
-zipangu::str_conv_romanhira("weguzawyiru", "hiragana")
-audubon::invert_to_kana("weguzawyiru")
-zipangu::str_conv_romanhira("jent'upengin", "hiragana")
-audubon::invert_to_kana("jent'upengin")
-```
-
-### Limitations
-
-- カタカナや「ー」など、マップできない文字があると`NA_character`になる
-- おそらくWindowsではデフォルトエンコーディングの影響で戻り値に「ゔ」が含まれると上手く変換されない
-
 
 ## License
 
 BLS-1.0
+
+Icons made by [iconixar](https://www.flaticon.com/authors/iconixar) from [www.flaticon.com](https://www.flaticon.com/).
