fix: fix strj_hiraganize name

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,6 +31,50 @@ audubon is an R package for various Japanese text processing that contains:
 remotes::install_github("paithio909/audubon")
 ```
 
+## Usage
+
+### Fill Japanese iteration marks (踊り字)
+
+```{r}
+## 5文字以上あるとき直前の文字を繰り返して踊り字を置換する
+strj_fill_iter_mark(c("あいうゝ〃かき",
+                      "金子みすゞ", ## 濁点付きの場合には半角の濁点を付ける
+                      "のたり〳〵かな", ## 2倍の踊り字（くの字点）まで対応している
+                      "しろ／″＼とした")) ## 青空文庫の記法も
+## 文字正規化とあわせて使う想定
+strj_fill_iter_mark("いすゞエルフトラック") %>%
+  strj_normalize()
+```
+
+### Character class conversion
+
+```{r}
+strj_hiraganize("あのイーハトーヴォのすきとおった風")
+strj_katakanize("あのイーハトーヴォのすきとおった風")
+strj_romanize("あのイーハトーヴォのすきとおった風")
+```
+
+### Japanese text normalization (1)
+
+```{r}
+## Neologd（https://github.com/neologd/mecab-ipadic-neologd/wiki/Regexp.ja）の文字正規化
+strj_normalize("――南アルプスの　天然水-　Ｓｐａｒｋｉｎｇ*　Ｌｅｍｏｎ+　レモン一絞り")
+```
+
+### Japanese text normalization (2)
+
+```{r}
+## ふつうのNFKC正規化
+stringi::stri_trans_nfkc("Ⅹⅳ")
+## Sudachiの文字正規化（rewrite.defによる文字置換＋NFKC正規化の部分）を移植したもの
+## Sudachiのrewrite.defではローマ数字などはNFKC正規化されない
+strj_rewrite_as_def("Ⅹⅳ")
+## tolowerはしない
+strj_rewrite_as_def("謎のヒロインX")
+## 旧字を新字体に寄せる
+strj_rewrite_as_def("惡と假面のルール", read_rewrite_def(system.file("def/kyuji.def", package = "audubon")))
+```
+
 ## License
 
 MIT license.
