fix: fix description

--- a/README.Rmd
+++ b/README.Rmd
@@ -86,7 +86,7 @@ strj_normalize("――南アルプスの　天然水-　Ｓｐａｒｋｉｎｇ
 audubon package contains several '*.def' files, so you can use them or write a 'rewrite.def' file by yourself as follows.
 
 ```
-# single characters will **never** normalized.
+# single characters will **never** be normalized.
 …
 # if two characters are separated with a tab,
 # left side forms are always rewritten to right side forms
