--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ audubon is Japanese text processing tools for:
 
 - filling Japanese iteration marks
 - hiraganization, katakanization and romanization using [hakatashi/japanese.js](https://github.com/hakatashi/japanese.js)
-- segmentation by phrase using [google/budoux](https://github.com/google/budoux)
+- segmentation by phrase using [google/budoux](https://github.com/google/budoux) and TinySegmenter.js
 - text normalization which is based on rules for the 'Sudachi' morphological analyzer and the 'NEologd' (Neologism dictionary for 'MeCab').
 
 Some features above are not implemented in 'ICU' (i.e., the stringi package), and the goal of the audubon package is to provide these additional features.
@@ -67,7 +67,7 @@ strj_romanize("あのイーハトーヴォのすきとおった風")
 
 ### Segmentation by phrase
 
-`strj_segment` splits Japanese text into some phrases using [google/budoux](https://github.com/google/budoux).
+`strj_segment` splits Japanese text into some phrases using [google/budoux](https://github.com/google/budoux) and TinySegmenter.
 
 ```{r segment}
 strj_segment("あのイーハトーヴォのすきとおった風")
