docs: update readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -67,10 +67,11 @@ strj_romanize("あのイーハトーヴォのすきとおった風")
 
 ### Segmentation by phrase
 
-`strj_segment` splits Japanese text into some phrases using [google/budoux](https://github.com/google/budoux) and TinySegmenter.
+`strj_tokenize` splits Japanese text into some phrases using [google/budoux](https://github.com/google/budoux), TinySegmenter,
+or other tokenizers.
 
-```{r segment}
-strj_segment("あのイーハトーヴォのすきとおった風")
+```{r tokenize}
+strj_tokenize("あのイーハトーヴォのすきとおった風", engine = "budoux")
 ```
 
 ### Japanese text normalization
