docs: update README

--- a/README.Rmd
+++ b/README.Rmd
@@ -116,4 +116,4 @@ strj_rewrite_as_def("惡と假面のルール", read_rewrite_def(system.file("de
 
 Licensed under the [Apache License, Version 2.0](https://www.apache.org/licenses/LICENSE-2.0.html).
 
-Icons made by [iconixar](https://www.flaticon.com/authors/iconixar) from [www.flaticon.com](https://www.flaticon.com/).
+Icons made by iconixar from flaticon.
